syntax = "proto3";

package letraz_server.RESUME;

import "google/protobuf/struct.proto";

service TailorResumeCallBackController {
    rpc TailorResumeCallBack(TailorResumeCallBackRequest) returns (TailorResumeCallBackResponse) {}
}

message DataRequest {
    TailoredResumeRequest tailored_resume = 1;
    repeated SuggestionRequest suggestions = 2;
    string thread_id = 3;
}

message MetadataRequest {
    string company = 1;
    string job_title = 2;
    string resume_id = 3;
}

message SectionRequest {
    string type = 1;
    google.protobuf.Struct data = 2;
}

message SuggestionRequest {
    string id = 1;
    string type = 2;
    string priority = 3;
    string impact = 4;
    string section = 5;
    string current = 6;
    string suggested = 7;
    string reasoning = 8;
}

message TailorResumeCallBackRequest {
    string processId = 1;
    string status = 2;
    DataRequest data = 3;
    string timestamp = 4;
    string operation = 5;
    string processing_time = 6;
    MetadataRequest metadata = 7;
}

message TailorResumeCallBackResponse {
    optional string msg = 1;
}

message TailoredResumeRequest {
    string id = 1;
    repeated SectionRequest sections = 2;
}

